# PeoPl

./: CMakeLists.txt  Cargo.toml  Package.swift  README.html  README.md  README.norg  README.org  example.simpl  grammar.js  pyproject.toml  todo.org
.github/workflows/: swift.yml
bindings/c/: tree-sitter-simpl.pc.in
bindings/python/tests/: test_binding.py
bindings/swift/TreeSitterSimpl/: simpl.h
bindings/swift/TreeSitterSimplTests/: TreeSitterSimplTests.swift
docs/: Manifesto.org  The PeoPl Manifesto.md  The PeoPl Manifesto.org  TheManifesto.org  features.md  features.org  idea.org  keywords.org  manifesto.md  manifesto.norg  manifesto.org  milestones.md  milestones.org  motivation.md  overview.md  overview.norg  overview.org  points.md  small_overview.md  small_overview.norg  small_overview.org  specification.org  specs.md  syntax.md  typesystem.org
examples/: .gitignore  basic.ppl  builin_typed.ppl  builtins.ppl  capturing_branching_looping.ppl  compound_expressions.ppl  db.ppl  function.ppl  mahmoud.ppl  main.ppl  mostafa.ppl  newsyntax.ppl  simple_expressions.ppl  testing.ppl  type_system.ppl
ppl.core/: .editorconfig  .gitignore  .swift-format  .swiftformat  .swiftlint.yml  IMPORTANT_NOTES.md  Package.resolved  Package.swift  README.md  SCOPING_DESIGN.md
ppl.core/Sources/: main.swift
ppl.core/Sources/Lsp/: Capabilities.swift  Server.swift
ppl.core/Sources/Main/: Build.swift  Logging.swift  Peopl.swift  PrintAST.swift  SourceManager.swift  build.swift  lsp.swift  main.swift
ppl.core/Sources/Parser/: Errors.swift  SyntaxTree+Encoding.swift  SyntaxTree+TreeSitter.swift
ppl.core/Sources/PeoplCore/: main.swift
ppl.core/Sources/PeoplLsp/: server.swift
ppl.core/Sources/Utils/: Logging.swift
ppl.core/Sources/cllvm/: cllvm.h  module.modulemap
ppl.core/Sources/llvmwrapper/: .clangd
ppl.core/Tests/CoreTests/: Utils.swift
ppl.core/Tests/MainTests/: AnalyzerTests.swift  BranchingExpressionTypeCheckingTests.swift  ExpressionTypeCheckingTests.swift  FunctionResolutionTests.swift  ParserTests.swift  TypeResolutionTests.swift  (+2 more)
ppl.cpp/: .clang-format  .clangd  .editorconfig  CMakeLists.txt  READMDE.md
ppl.cpp/src/: CMakeLists.txt  common.cpp  main.cpp  peopl.cpp  syntax+debug.cpp  syntax.cpp
ppl.cpp/src/syntax/: debug.cpp  parser+debug.cpp  parser.cpp  tokenizer+debug.cpp  tokenizer.cpp
ppl.cpp/tests/: CMakeLists.txt  test_all.cpp  test_parser.cpp  test_tokenizer.cpp
ppl.llvm/: .clang-format  Package.resolved  Package.swift  main  main.cpp  make.sh
ppl.llvm/Sources/: main.swift
ppl.parser/: build.zig  build.zig.zon
ppl.parser/src/: main.zig  root.zig
ppl.rs/: Cargo.toml  rustfmt.toml
ppl.rs/src/: main.rs
ppl.treesitter/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  grammarv0.js  grammarv1.js  grammarv2.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
ppl.treesitter/bindings/c/: tree-sitter-peopl.pc.in
ppl.treesitter/bindings/go/: binding.go  binding_test.go
ppl.treesitter/bindings/node/: binding.cc  index.js
ppl.treesitter/bindings/python/tests/: test_binding.py
ppl.treesitter/bindings/python/tree_sitter_peopl/: __init__.py  binding.c
ppl.treesitter/bindings/rust/: build.rs  lib.rs
ppl.treesitter/bindings/swift/TreeSitterPeoPl/: peopl.h
ppl.treesitter/bindings/swift/TreeSitterPeoPlTests/: TreeSitterPeoPlTests.swift
ppl.treesitter/queries/: highlights.scm  highlights2.scm  highlightsv2.scm  indents.scm
ppl.treesitter/src/: grammar.json  node-types.json  parser.c
queries/: highlights.scm
simpl.llvm/: Package.resolved  Package.swift
simpl.llvm/Sources/: main.swift
simpl.treesitter/: Makefile  binding.gyp  go.mod  grammar.js  package.json  setup.py  tree-sitter.json
simpl.treesitter/queries/: highlights.scm
simpl.treesitter/src/: grammar.json  node-types.json  parser.c
src/: grammar.json  node-types.json  parser.c
(+226 files in other folders)
